--- a/index.html
+++ b/index.html
@@ -62,6 +62,6 @@
 		<p style="text-align: center; font-weight: bold; margin-top: 30px">
 			You can now use <span style="color: #27ae60">Go</span> in your terminal!
 		</p>
-		<script src="/js/darkMode.js"></script>
+		<script src="js/darkMode.js"></script>
 	</body>
 </html>
