Refactor author metadata in index.html

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		<meta
 			name="keywords"
 			content="Go, Golang, install Go, Go installation, get started with Go, Go programming, Go for beginners" />
-		<meta name="author" content="Your Name or Organization" />
+		<meta name="wathika" content="wathika-eng" />
 		<meta name="robots" content="index, follow" />
 		<meta
 			property="og:title"
